samples/_failures_safe/1761043919_7c9ac9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6691616.c: In function ‘main’:
./samples/SAFE/__tmp_f6691616.c:132:50: error: unterminated argument list invoking macro "MATRIX_ADD"
  132 |         MATRIX_ADD(result, matrix1, matrix2, rows
      |                                                  ^
./samples/SAFE/__tmp_f6691616.c:132:9: error: ‘MATRIX_ADD’ undeclared (first use in this function)
  132 |         MATRIX_ADD(result, matrix1, matrix2, rows
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_f6691616.c:132:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f6691616.c:132:19: error: expected ‘;’ at end of input
  132 |         MATRIX_ADD(result, matrix1, matrix2, rows
      |                   ^
      |                   ;
./samples/SAFE/__tmp_f6691616.c:132:9: error: expected declaration or statement at end of input
  132 |         MATRIX_ADD(result, matrix1, matrix2, rows
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_f6691616.c:132:9: error: expected declaration or statement at end of input
